force-app/main/default/objects/Experlogix__Configuration__c/Experlogix__Configuration__c.object-meta.xml
<CustomObject>
    <label>Experlogix Configuration</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>RecordNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experlogix Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>