force-app/main/default/objects/Experlogix__Configuration__c/fields/Experlogix__ConfigCount__c.field-meta.xml
<CustomField>
    <fullName>Experlogix__ConfigCount__c</fullName>
    <label>ConfigCount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>