force-app/main/default/objects/Experlogix__Configuration__c/fields/Experlogix__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>Experlogix__ObjectId__c</fullName>
    <label>ObjectId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>