force-app/main/default/objects/Experlogix__Configuration__c/fields/Experlogix__ObjectType__c.field-meta.xml
<CustomField>
    <fullName>Experlogix__ObjectType__c</fullName>
    <description>Type of object that relates to the configuration instance.</description>
    <label>ObjectType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>