force-app/main/default/objects/Experlogix__Configuration__c/fields/Experlogix__TotalLength__c.field-meta.xml
<CustomField>
    <fullName>Experlogix__TotalLength__c</fullName>
    <label>TotalLength</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>