force-app/main/default/objects/Experlogix__Configuration__c/listViews/Experlogix__All.listView-meta.xml
<ListView>
    <fullName>Experlogix__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Experlogix__ObjectId__c</columns>
    <columns>NAME</columns>
    <columns>Experlogix__ChunkCount__c</columns>
    <columns>Experlogix__ConfigCount__c</columns>
    <columns>Experlogix__TotalLength__c</columns>
    <columns>Experlogix__RevisionNumber__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Experlogix__ObjectType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>